2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* kpath-guile/kpath.c: new file. Put kpath bindings in lib.

	* kpath-guile/GNUmakefile: new file

	* buildscripts/gen-emmentaler-scripts.py (i): generate
	emmentaler-X.fontname as well.

	* buildscripts/ps-embed-cff.py: new script

	* scm/lily-library.scm: remove ps-embed-cff.

	* scm/framework-ps.scm (write-preamble): don't use kpathsea for
	font loading. 

	* scm/font.scm (add-music-fonts): load dynamics/numbers through
	fontconfig as well.

	* lily/font-config.cc (init_fontconfig): add cff/ too.

	* mf/GNUmakefile: generate .commonff to not confuse fontconfig.

	* ly/generate-embedded-cff.ly: capitalize.

	* lily/pango-select.cc (select_pango_font): use ::find_pango_font,
	so as to register the pango font.

	* lily/font-config.cc (init_fontconfig): add
	prefix/{otf,type1,mf/out} to fontconfig path.

	* lily/main.cc: only look at one prefix directory, LILYPONDPREFIX
	overrides all. 

	* config.make (package_suffix): use lilypond/MAJOR.MINOR as install
	directory.

	* configure.in (gui_b): remove ec mftrace check

	* config.hh.in: use lilypond-Major.Minor as data directory.

	* scm/framework-ps.scm (dump-page): use output-units for landscape.

	* buildscripts/gen-emmentaler-scripts.py (i): lower case file
	name.

2005-03-06  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/main.cc (do_chroot_jail): Small cleanups.  Avoid constant
	error messages.

	* flower/libc-extension.cc:
	* flower/include/libc-extension.hh: [Open]BSD fixes for
	cookie/funopen declarations.

2005-03-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* buildscripts/gen-emmentaler-scripts.py (outdir): capitalize
	emmentaler.

	* lily/score-engraver.cc (initialize): remove check for ecrm10 /
	lcrm10.

	* scm/define-markup-commands.scm (fontsize): new markup
	command. Also set baseline-skip

	* lily/main.cc (do_chroot_jail): paranoia security for webserver
	use. Patch by Sebastiano Vigna <vigna@dsi.unimi.it>.
