@@ -10,7 +10,7 @@ depth = .
 # 
 SUBDIRS = buildscripts python scripts \
 	elisp \
-	flower ttftool lily \
+	flower kpath-guile ttftool lily \
 	mf ly tex ps scm \
 	po make \
 	cygwin debian stepmake \
