@@ -1,0 +1,21 @@
+# title	   top level makefile for FlowerLib
+# file	   flower/Makefile
+
+# should reinstate versioning if shared libs are enabled.
+
+depth = ..
+
+NAME = kpath-guile
+MODULE_NAME = kpath-guile
+
+SCRIPTS = 
+STEPMAKE_TEMPLATES=library c po
+
+
+
+include $(depth)/make/stepmake.make 
+
+CFLAGS += -std=c99
+$(outdir)/kpath.o: $(config_hh)
+
+
